--- a/1_설계/설계서.md
+++ b/1_설계/설계서.md
@@ -2,13 +2,13 @@
 
 ## 1. 프로젝트 주제
 (예: 학생 성적 관리 프로그램)
-
+학습 진도 관리 프로그램
 ## 2. 핵심 기능 목록
 (구현할 기능들을 순서대로 나열하세요.)
-1.  
-2.  
-3.  
-4.  
+1.  과목 수 입력
+2.  과목명 및 진도율 입력
+3.  평균 진도율 계산
+4.  최저,최고 진도율 과목 탐색
 
 ## 3. 데이터 구조 설계
 (프로그램에 필요한 핵심 변수, 배열을 설계하세요. 필요하면 구조체(struct)를 사용할 수도 있습니다.)
