데이터 구조 설계 완료

--- a/1_설계/설계서.md
+++ b/1_설계/설계서.md
@@ -15,21 +15,17 @@
 
 **방법 1: 배열 사용 (기본)**
 ```c
-// 예시: 학생 5명의 이름과 성적 저장
-char names[5][20];
-int scores[5];
-int count = 0;  // 현재 학생 수
-```
+char subjectname[30][30]; //과목명저장
+int progressrates[30]; //진도율저장(1~100)
+int subjectcount = 0; //실제 입력되는 과목의 수 
 
 **방법 2: 구조체 사용 (선택)**
 ```c
 // 예시: 학생 정보를 구조체로 묶어서 관리
-struct Student {
-    char name[20];
-    int kor;
-    int eng;
-    int math;
-    float avg;
+struct subject {
+    char name[30]; //과목명 문자열
+    int progress; //진도율
+    float goal; //목표진도율
 };
-struct Student students[5];  // 학생 5명 저장
+struct subject subjects[30];  // 과목정보 30개 저장 가능한 배열
 ```
