--- a/2_알고리즘/의사코드.md
+++ b/2_알고리즘/의사코드.md
@@ -3,19 +3,38 @@
 ## 1. `main` 함수의 전체 흐름
 (프로젝트의 전체 작동 로직을 의사 코드로 작성하세요.)
 
-(예시 - 관리 프로그램의 경우)
+
 ```
 시작
-반복 (사용자가 '종료'를 선택할 때까지):
-    메뉴 출력 (1.등록, 2.조회, 0.종료)
-    사용자 선택 입력
-    만약 선택이 1이면:
-        등록 함수 호출
-    만약 선택이 2이면:
-        조회 함수 호출
-    만약 선택이 0이면:
-        반복 종료
+
+과목 수를 0으로 초기화
+
+반복(사용자가 0을 선택하여 종료할 때까지):
+메뉴 출력
+1.과목 추가(과목명 + 진도율 입력)
+2.전체 과목 진도율 출력
+3.평균 진도율 계산
+4.최고/최저 진도율 과목 찾기
+0. 종료
+
+사용자에게 메뉴 선택 입력받기 
+
+만약 선택이 1이면 :
+과목 추가 함수 호출
+
+막약 선택이 2이면:
+과목 리스트 출력 함수 호출
+
+만약 선택이 3이면 :
+평균 진동율 계산 함수 호출
+
+만약 선택이 4이면 :
+최고 + 최저 진도율 찾기 함수 호출
+
+만약 선택이 0이면 : 
+반복 종료(프로그램 종료)
 반복 끝
+
 종료
 ```
 
@@ -23,17 +42,23 @@
 ```
 (핵심 기능 1의 논리적 절차를 작성하세요.)
 
-예시:
+
 시작
-    만약 현재 학생 수가 최대 인원을 초과하면:
-        "등록 불가" 메시지 출력
-        함수 종료
-    아니면:
-        학생 이름 입력받기
-        성적 입력받기 (국어, 영어, 수학)
-        평균 계산
-        배열에 저장
-        현재 학생 수 증가
+
+만약 현재 수 (subjectcount)가 30개 이상이면:
+"더 이상 입력할 수 없습니다." 출력
+함수 종료
+
+과목 이름 입력받기 
+진도율(0~100 사이 숫자) 입력받기
+
+입력한 과목 이름을 배열에 저장
+입력한 진도율을 배열에 저장
+
+subjectcount(과목 수)를 1 증가
+
+"과목이 성공적으로 등록되었습니다." 출력
+
 종료
 ```
 
@@ -41,3 +66,14 @@
 ```
 (핵심 기능 2의 논리적 절차를 작성하세요.)
 ```
+시작
+
+만약 저장된 과목 수가 0이라면:
+"등록된 과목이 없습니다." 출력
+함수 종료
+
+0번 과목부터 현재 과목 수 -1번 과목까지 반복:
+과목 이름 출력
+해당 과목의 진도율 출력
+
+종료
