설계서 수정

--- a/1_설계/설계서.md
+++ b/1_설계/설계서.md
@@ -5,27 +5,26 @@
 학습 진도 관리 프로그램
 ## 2. 핵심 기능 목록
 (구현할 기능들을 순서대로 나열하세요.)
-1.  과목 수 입력
-2.  과목명 및 진도율 입력
-3.  평균 진도율 계산
-4.  최저,최고 진도율 과목 탐색
+1.  과목 입력
+2.  과목명 입력
+3.  진도율 입력
+4.  평균 진도율 계산
+5.  최저,최고 진도율 보기
 
 ## 3. 데이터 구조 설계
 (프로그램에 필요한 핵심 변수, 배열을 설계하세요. 필요하면 구조체(struct)를 사용할 수도 있습니다.)
 
-**방법 1: 배열 사용 (기본)**
-```c
-char subjectname[30][30]; //과목명저장
-int progressrates[30]; //진도율저장(1~100)
-int subjectcount = 0; //실제 입력되는 과목의 수 
 
-**방법 2: 구조체 사용 (선택)**
-```c
 
-struct subject {
-    char name[30]; //과목명 문자열
-    int progress; //진도율
-    float goal; //목표진도율
-};
-struct subject subjects[30];  // 과목정보 30개 저장 가능한 배열
+**방법  구조체 사용 **
+#define MAX_NAME_LENGTH 50
+
+typedef struct{
+    int id; //항목 숫자
+    char subject[MAX_NAME_LENGTH]; //과목 이름을 넣을 공간
+    int total_units; //전체 분량 (페이지 또는 챕터)
+    int current_progress; //현재진도량
+}LearningItem;
+
+LearningItem items[100]; //최대 100개의 과목항목을 저장 가능한 배열
 ```
