의사코드 수정

--- a/2_알고리즘/의사코드.md
+++ b/2_알고리즘/의사코드.md
@@ -7,73 +7,126 @@
 ```
 시작
 
-과목 수를 0으로 초기화
+시작시 기존 데이터 불러오기: load_data() 함수호출
+기존 데이터가 없으면 새로 만드는 작업을 수행함.
 
-반복(사용자가 0을 선택하여 종료할 때까지):
+현재 저장된 과목 수를 0으로 초기화
+
+반복(사용자가 6을 선택하여 종료할 때까지):
+
 메뉴 출력
-1.과목 추가(과목명 + 진도율 입력)
-2.전체 과목 진도율 출력
-3.평균 진도율 계산
-4.최고/최저 진도율 과목 찾기
-0. 종료
+1.새로운 학습 항목 추가
+2. 전체 항목 목록 보기
+3. 진도 업데이트
+4.학습 항목 삭제
+5. 진도율 통계보기
+6.종료 및 저장
 
-사용자에게 메뉴 선택 입력받기 
+사용자에게 메뉴 선택 입력받기
 
 만약 선택이 1이면 :
 과목 추가 함수 호출
 
-막약 선택이 2이면:
+만약 선택이 2이면 :
 과목 리스트 출력 함수 호출
 
 만약 선택이 3이면 :
-평균 진동율 계산 함수 호출
+새로운 진도 업데이트 함수 호출
 
 만약 선택이 4이면 :
-최고 + 최저 진도율 찾기 함수 호출
+학습 항목 삭제 함수 호출
 
-만약 선택이 0이면 : 
-반복 종료(프로그램 종료)
+만약 선택이 5이면:
+진도율 통계 보기 함수 호출
+
+만약 선택이 6이면:
+파일에 저장 함수 호출(파일에 저장 및 프로그램 종료)
 반복 끝
 
 종료
+
+
+
 ```
 
-## 2. 핵심 기능 1: (예: 학생 등록 함수)
-```
-(핵심 기능 1의 논리적 절차를 작성하세요.)
-
-
+## 2. 핵심 기능 1: (add_item)
 시작
 
-만약 현재 수 (subjectcount)가 30개 이상이면:
-"더 이상 입력할 수 없습니다." 출력
-함수 종료
+만약 항목 수 (item_count)가 100개 이상이면:
+"최대항목개수(100개)에 도달했습니다" 출력
 
-과목 이름 입력받기 
-진도율(0~100 사이 숫자) 입력받기
+그렇지 않으면
 
-입력한 과목 이름을 배열에 저장
-입력한 진도율을 배열에 저장
+과목 이름( 최대 49자 띄어쓰기 허용)입력받기
+과목의 전체 분량(페잊 또는 챕터)값 입력받기
+현재 진도량(페이지 또는 챕터)값 입력받기
 
-subjectcount(과목 수)를 1 증가
+입력한 과목 이름을 구조체배열의 멤버(char subject[])에
+저장
+입력한 과목의 전체 분량을 구조체배열의 멤버(int total_units)에 저장
+입력한 과목의 현재 진도량을 구조체 배열의 멤버(int current_progress)에 저장
 
-"과목이 성공적으로 등록되었습니다." 출력
+과목수 (item_count)를 12ㅡㅇ가
+
+"항목이 성공적으로 추가되었습니다.('과목명' ID:id값)"출력
 
 종료
-```
 
-## 3. 핵심 기능 2: (예: 학생 검색 함수)
-```
-(핵심 기능 2의 논리적 절차를 작성하세요.)
-```
+
+## 3. 핵심 기능 2: (delete_item())
 시작
 
 만약 저장된 과목 수가 0이라면:
-"등록된 과목이 없습니다." 출력
+"삭제할 학습 항목이 없습니다."출력
 함수 종료
 
-0번 과목부터 현재 과목 수 -1번 과목까지 반복:
-과목 이름 출력
-해당 과목의 진도율 출력
+그렇지 않으면
+기존의 테이블 형식의 구조를 보여주는 함수를 호출한 다음
+삭제할 항목의 ID를 입력받아 항목에 해당하는 행을 모두 삭제하고 아래에 있는 항목들을 끌어올림
+전체 항목수를 하나 감소함
+"항목이 성공적으로 삭제되었습니다." 출력
+종료
+
+## 3. 핵심 기능 3 (view_items())
+
+시작
+
+만약 저장되 과목 수 (item_count)가 0이라면:
+"등록된 학습 항목이 없습니다."출력
+함수 종료
+
+그렇지 않으면 
+ID 과목명 전체분량 현재진도 진행률의 형태로 등록된 학습 항목을 보여줌
 
 종료
+
+## 3. 핵심 기능 4(update_progress())
+시작
+
+만약 저장된 과목 수 (item_count)가 0이라면:
+"업데이트할 학습 항목이 없습니다.먼저 항목을 추가해 주세요."출력
+함수 종료
+
+그렇지 않으면 
+진도를 업데이트할 항목의 ID를 입력하고, 만약 입력한 ID값이 없으면(삭제 또는 없는 ID넘버)
+"해당 ID를 가진 항목을 찾을수 없습니다."출력후 종료
+그렇지 ㅇ않으면
+현재 진도량을 보여주고 새로운 진도량을 입력 받음
+"'과목이름' 항목의 진도가(새로입력한 값)으로 업데이트되었습니다."출력
+
+종료
+
+## 3. 핵심 기능 5: (calculate_and_display_stats())
+시작
+
+만약 저장되 과목 수(item_count)가 0이라면:
+"등록된 학습 항목이 없어 통계를 계산할 수 없습니다." 출력 
+함수 종료
+
+그렇지 않으면
+현재 진도량/과목 전체분량으로 계산하여 진도율 계산
+최대진도율과 최소진도율 갱신
+각각의 진도율을 더한 후 과목수로 나누어(진도율이 0인 항목은 통계에서 제외)평균 진도율 계산
+각각의 변수에 저장
+종료
+```
