--- a/4_디버깅/디버깅_보고서.md
+++ b/4_디버깅/디버깅_보고서.md
@@ -5,40 +5,36 @@
 ---
 
 ## 📝 작성 정보
-- **작성 날짜:** 2025년 __월 __일
-- **작성자:** (이름)
+- **작성 날짜:** 2025년 _11월 27일
+- **작성자:** 신담원
 
 ---
 
 ## 🐛 발견한 오류 #1
 
 ### 1) 어떤 문제가 발생했나요?
-(예: 프로그램을 실행하면 이상한 값이 나왔어요 / 컴파일이 안 돼요)
+실행이 안되요
 
 ```
-문제 상황을 간단히 설명하세요.
+프로그램이 작동되지 않는다
 ```
 
 ### 2) 오류가 발생한 코드
 ```c
-// 문제가 있던 코드를 여기에 복사하세요
+ printf("6. 종료 및 저장 \n;
 ```
 
 ### 3) 왜 오류가 생겼나요?
-(예: 세미콜론(;)을 빼먹었어요 / 변수 이름을 잘못 썼어요)
-
-```
-원인을 간단히 적어보세요.
+괄호를 닫지 않았어요
 ```
 
 ### 4) 어떻게 고쳤나요?
 ```c
-// 고친 코드를 여기에 적어주세요
+ printf("6. 종료 및 저장 \n");
 ```
 
 ### 5) 고친 후 결과
-- [ ] ✅ 잘 작동해요!
-- [ ] ❌ 아직 문제가 있어요
+-잘 작동해요
 
 ---
 
@@ -46,81 +42,41 @@
 
 ### 1) 어떤 문제가 발생했나요?
 ```
-문제 상황을 간단히 설명하세요.
+프로그램이 작동을 안해요
 ```
 
 ### 2) 오류가 발생한 코드
-```c
-// 문제가 있던 코드를 여기에 복사하세요
-```
+printf("\n 해당 ID(%d)를 가진 항목을 찾을 수 없습니다.\n", id)
 
 ### 3) 왜 오류가 생겼나요?
 ```
-원인을 간단히 적어보세요.
-```
+세미콜론을 빼먹었어요
 
 ### 4) 어떻게 고쳤나요?
-```c
-// 고친 코드를 여기에 적어주세요
-```
+printf("\n 해당 ID(%d)를 가진 항목을 찾을 수 없습니다.\n", id);
 
 ### 5) 고친 후 결과
-- [ ] ✅ 잘 작동해요!
-- [ ] ❌ 아직 문제가 있어요
-
+잘 작동해요
 ---
 
-## 🐛 발견한 오류 #3 (더 있으면 추가로 작성하세요)
 
-### 1) 어떤 문제가 발생했나요?
-```
-문제 상황을 간단히 설명하세요.
-```
-
-### 2) 오류가 발생한 코드
-```c
-// 문제가 있던 코드
-```
-
-### 3) 왜 오류가 생겼나요?
-```
-원인을 간단히 적어보세요.
-```
-
-### 4) 어떻게 고쳤나요?
-```c
-// 고친 코드
-```
-
-### 5) 고친 후 결과
-- [ ] ✅ 잘 작동해요!
-- [ ] ❌ 아직 문제가 있어요
-
----
 
 ## 🧪 프로그램 테스트 결과
 
 ### 테스트 1
-- **무엇을 테스트했나요?** (예: 학생 정보 입력)
-- **어떻게 테스트했나요?** (예: 이름에 "홍길동", 나이에 20을 입력했어요)
-- **결과:** ✅ 성공 / ❌ 실패
-
+- **무엇을 테스트했나요?** 과목명과 학습량 확인
+- **어떻게 테스트했나요?** 과목명을 입력하고 총페이지 수와 진행된 페이지 수를 작성했어요
+- **결과:** ✅ 성공 
 ### 테스트 2
-- **무엇을 테스트했나요?** 
-- **어떻게 테스트했나요?** 
-- **결과:** ✅ 성공 / ❌ 실패
+- **무엇을 테스트했나요?** 이전의 입력한 과목(진도율)삭제
+- **어떻게 테스트했나요?** 4(delete_item())을 입력하여 이전의 입력한 내용을 삭제 했어요
+- **결과:** ✅ 성공 
 
 ---
 
 ## 💭 디버깅하면서 배운 점
 
-이번 프로젝트에서 오류를 고치면서 새롭게 알게 된 점이나 느낀 점을 자유롭게 적어보세요.
-
-```
-(예시)
-- 세미콜론(;)을 빼먹으면 컴파일 오류가 난다는 것을 배웠어요.
-- scanf를 쓸 때 &를 꼭 써야 한다는 걸 알았어요.
-- 에러 메시지를 잘 읽으면 문제를 더 쉽게 찾을 수 있었어요.
+디버깅을 해보면서 세미콜론(;)의 중요성과 함수의 괄호를 잘 닫는 것이 중요하다는 것을 깨닳았습니다.
 ```
 
 ---
