--- a/4_디버깅/디버깅_보고서.md
+++ b/4_디버깅/디버깅_보고서.md
@@ -50,7 +50,7 @@ printf("\n 해당 ID(%d)를 가진 항목을 찾을 수 없습니다.\n", id)
 
 ### 3) 왜 오류가 생겼나요?
 ```
-세미콜론을 빼먹었어요
+세미콜론을 빼먹었어요.
 
 ### 4) 어떻게 고쳤나요?
 printf("\n 해당 ID(%d)를 가진 항목을 찾을 수 없습니다.\n", id);
